--- a/events/package.json
+++ b/events/package.json
@@ -25,7 +25,10 @@
     "@angular/router": "^5.0.0",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
