--- a/events/package.json
+++ b/events/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^5.0.0",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "passport": "^0.4.0",
