--- a/events/package.json
+++ b/events/package.json
@@ -28,9 +28,13 @@
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "mysql": "^2.15.0",
+    "mysql2": "^1.5.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "rxjs": "^5.4.2",
+    "sequelize": "^2.0.0-rc1",
+    "sequelize-cli": "^3.2.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
