--- a/events/package.json
+++ b/events/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.0.0-beta.2",
+    "connect-flash": "^0.1.1",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
