--- a/events/package.json
+++ b/events/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-fileupload": "^0.3.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
     "passport": "^0.4.0",
