--- a/events/package.json
+++ b/events/package.json
@@ -26,6 +26,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.0.0-beta.2",
     "connect-flash": "^0.1.1",
+    "cookie-session": "^2.0.0-beta.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
@@ -33,7 +34,11 @@
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
+    "passport-linkedin": "^1.0.0",
+    "passport-linkedin-oauth2": "^1.5.0",
+    "passport-local": "^1.0.0",
     "rxjs": "^5.4.2",
     "sequelize": "^2.0.0-rc1",
     "sequelize-cli": "^3.2.0",
