--- a/events/package.json
+++ b/events/package.json
@@ -28,6 +28,7 @@
     "connect-flash": "^0.1.1",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
