--- a/events/package.json
+++ b/events/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular-hammer": "^2.2.0",
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.0.0-beta.2",
     "connect-flash": "^0.1.1",
