--- a/events/package.json
+++ b/events/package.json
@@ -34,6 +34,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
+    "jshint": "^2.9.5",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
