--- a/events/package.json
+++ b/events/package.json
@@ -24,6 +24,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
+    "@types/date-fns": "^2.6.0",
+    "angular-calendar": "^0.23.2",
+    "angular-font-awesome": "^3.1.2",
     "angular-hammer": "^2.2.0",
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.0.0-beta.2",
@@ -31,9 +35,11 @@
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
+    "date-fns": "^1.29.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
+    "font-awesome": "^4.7.0",
     "jshint": "^2.9.5",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
