--- a/events/package.json
+++ b/events/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^4.2.4",
+    "@angular/animations": "^4.4.6",
     "@angular/cdk": "^5.0.0-rc0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
@@ -44,6 +44,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
+    "ng-pick-datetime": "^5.1.0-beta-1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "rxjs": "^5.4.2",
