--- a/events/package.json
+++ b/events/package.json
@@ -48,7 +48,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "rxjs": "^5.4.2",
-    "sequelize": "^2.0.0-rc1",
+    "sequelize": "^2.1.3",
     "sequelize-cli": "^3.2.0",
     "zone.js": "^0.8.14"
   },
@@ -69,6 +69,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "sequelize-cli": "^3.2.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.0"
